--- a/apps/client/src/styles.css
+++ b/apps/client/src/styles.css
@@ -1,1 +1,33 @@
-/* You can add global styles to this file, and also import other style files */
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+:root {
+    /* Colors */
+    --clr-primary: #131313;
+    --clr-secondary: #F5F7F8;
+    --clr-primary-dark: #161616;
+
+    /* Sizes */
+    --max-board-size: 37.5rem;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
+    font-family: "Montserrat", sans-serif;
+}
+
+html, body {
+    block-size: 100%;
+    inline-size: 100%;
+}
+
+main {
+    background-color: var(--clr-primary);
+    block-size: 100vh;
+    inline-size: 100vw;
+    display: grid;
+    place-items: center;
+}
